# consulta-google

./: Procfile  main.py  package.json  pyproject.toml  requirements.txt  run.sh  teste.html
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  Carousel.js  Process.js
server/: app.js  package-lock.json  package.json
server/config/: config.json
server/database/migrations/: 20200723063748-create-pesquisa.js
server/models/: consulta.js  sinonimo.js
server/routes/: index.js
server/services/: like.js  pesquisa.js  photo_google.js
server/views/: footer.ejs  header.ejs  index.ejs  nav.ejs  result.ejs  signo.ejs
util/: pesquisa.py  pesquisa_google.py  photo_google.py
