[tool.poetry]
name = "consulta-google"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
logzero = "^1.5.0"
flask-cors = "^3.0.8"
flask = "^1.1.2"
markupsafe = "^1.1.1"
wikipedia = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
